# projectEJJ

./: .gitignore  Dockerfile.worker  docker-compose.yml
news/2024-02-13/: TodayTopic.json
src/: discord_receive.sh  discord_send.sh  start.sh
src/worker/: const.py  create_folder.py  create_image.py  create_json.py  create_script.py  example.py  main.py  news_scrap.py  test.py
src/worker/discord/: receiver.py  sender_params.json
src/worker/poetry/: pyproject.toml
