[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["GGomsi <jsuhak@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
openai = "^1.8.0"
pytz = "^2023.3.post1"
pillow = "^10.2.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
